examples/dynamic-island/src/native_panel_renderer/snapshots/dynamic_island__native_panel_renderer__snapshot_tests__snapshot_tests__expanded_full.snap
---
source: examples/dynamic-island/src/native_panel_renderer/snapshot_tests.rs
assertion_line: 50
expression: snapshot
---
scenario: expanded_full
primitives:
  - type: RoundRect
    frame:
      x: 0
      y: 0
      width: 400
      height: 300
    radius: 16
    color: "rgb(12, 12, 15)"
  - type: Rect
    frame:
      x: 20
      y: 52
      width: 360
      height: 1
    color: "rgb(62, 62, 70)"
  - type: RoundRect
    frame:
      x: 20
      y: 70
      width: 360
      height: 100
    radius: 8
    color: "rgb(24, 24, 27)"
metadata:
  timestamp: 2026-05-30
  display_mode: Expanded
  animation_progress: 1
